--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=https://e-shop-jcbj.onrender.com/
-REACT_APP_API_BASE_URL=https://e-shop-jcbj.onrender.com/ 
+VITE_API_BASE_URL=http://localhost:5000/
+REACT_APP_API_BASE_URL=http://localhost:5000/ 
